<resources>
    <string name="app_name">Simple Weather</string>
    <string name="search_hint">输入城市名称</string>
    <string name="query_bottom">查询</string>
    <string name="loading">加载中</string>
    <string name="no_result">好像没有结果……</string>
    <string name="switch_city">切换城市</string>
    <string name="yes">是</string>
    <string name="no">表</string>
    <string name="sure">确定？</string>
    <string name="refresh">刷新天气信息？</string>
    <string name="setting">设置</string>
    <string name="load_finish">刷新完毕</string>
    <string name="refresh_icon">刷新</string>
    <string name="publish_date_text">更新时间</string>
    <string name="today">今天</string>
    <string name="future">未来几天</string>

    <string name="tomorrow">明天</string>
    <string name="about">关于</string>
    <string name="more">More</string>
    <string name="no_network">网络出错了……</string>
    <string name="error_network">载入失败</string>
    <string name="about_text">本人第一次写的App\n用于练习\n有Bug在所难免……</string>
    <string name="open_source">Github</string>
    <string name="open_source_text">https://github.com/Kuanghusing/Weather</string>
    <string name="somthing">Apache License</string>
    <string name="somthing_text">"Version 2.0, January 2004
    http://www.apache.org/licenses/APPENDIX: How to apply the Apache License to your work.

      To apply the Apache License to your work, attach the following boilerplate notice, with the fields enclosed by brackets "{}" replaced with your own identifying information. (Don't include the brackets!)  The text should be enclosed in the appropriate comment syntax for the file format. We also recommend that a file or class name and description of purpose be included on the same "printed page" as the copyright notice for easier identification within third-party archives.

   Copyright {yyyy} {name of copyright owner}
        Licensed under the Apache License, Version 2.0 (the "License");

        you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License."
    </string>


    <string name="C">℃</string>

    <string name="auto_update">自动更新天气</string>
    <string name="auto_update_summary">后台自动更新</string>
    <string name="update_time">更新间隔</string>
    <string name="update_time_summary">设置更新的频率（小时）</string>
    <string name="update_app">检查更新</string>
    <string name="no_value_error">不能为空哦……</string>
</resources>
