<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/app_name">


        <SwitchPreference
            android:key="auto_update"
            android:summary="@string/auto_update_summary"
            android:title="@string/auto_update" />

        <EditTextPreference
            android:defaultValue="2"
            android:key="update_time"
            android:summary="@string/update_time_summary"
            android:title="@string/update_time" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/more">
        <Preference
            android:key="about"
            android:title="@string/about" />

        <Preference
            android:key="open_source"
            android:summary="@string/open_source_text"
            android:title="@string/open_source" />

        <Preference
            android:key="update_app"
            android:title="@string/update_app" />
    </PreferenceCategory>


</PreferenceScreen>